--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Update gist
-        uses: Zalbani/Gist_GHData-box@master
+        uses: Zalbani/Gist_GHData@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: ${{ secrets.GIST_ID }}
