--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -17,4 +17,4 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: ${{ secrets.GIST_ID }}
-          CONSIDER_PRIVATE: ${{ secrets.CONSIDER_PRIVATE }}
+          CONSIDER_PRIVATE: true
